labo4/labo4-sample-destinationrule.yaml
# 公式ドキュメントに載ってて動作検証用に適用したやつ
# https://istio.io/latest/docs/tasks/traffic-management/circuit-breaking/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: target
spec:
  host: target
  trafficPolicy:
    # connectionPool: # 検証
    #   tcp:
    #     maxConnections: 1
    #   http:
    #     http1MaxPendingRequests: 1
    #     maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 10s
      baseEjectionTime: 3m
      maxEjectionPercent: 50 # 割合変化による挙動 minhealthpercentも合わせて検証
